新增订单状态接口
