# docs/swagger.yaml
@@ -419,6 +419,17 @@ paths:
        200:
          description: 成功
          schema:
+           $ref: '#/definitions/resp'
+ /order/status:
+   get:
+     summary: 订单状态
+     description: 订单状态
+     tags:
+       - 订单
+     responses:
+       200:
+         description: 成功
+         schema:
  /product/index:
    get:
      summary: 商品列表
